graphics(desktop): install GLFW error callback at init; close() unregisters maximize/refresh + guards pause/dispose (ISS-551)
Three desktop-window lifecycle bugs (SGE-original, both backends): (1) no GLFW
error callback was installed at init (LibGDX installs one), so GLFW failures were
silently dropped — now WindowingOpsJvm.init()/WindowingOpsNative.init() install a
logging glfwSetErrorCallback before glfwInit (JVM stub in the long-lived auto
arena). (2) DesktopWindow.close() unregistered focus/iconify/close/drop but leaked
the maximize/refresh callbacks (registered at :78,81) — now nulled too. (3) close()
NPEd on _listener.pause()/dispose() when a window was closed before its first
update (_listener uninitialized until update) — now guarded by _listenerInitialized.

red:dc4badf1 (DesktopIntegrationTest lifecycle subprocess: clause1 glfwSetErrorCallback
returns non-null; clause3 close()-before-update no NPE) fix:a4459a87 audit:PASS
(proof-of-red, 2 mutations, JVM/Native compile; clause2 by inspection; @nowarn judged
consistent with the 12 existing E198 reflection-bound-upcall suppressions).